# statsutil

./: .gitignore  LICENSE  README.md  percentile.py  pyproject.toml  setup.cfg  stddev.py
statsutil/: percentile.py  stddev.py
