[metadata]
name = statsutil
version = 0.0.1
author = ivanrad
description = Stats on the command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ivanrad/statsutil
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
zip_safe = True

[options.package_data]
* = *.txt, *.md

[options.entry_points]
console_scripts = 
    percentile = statsutil.percentile:main
    stddev = statsutil.stddev:main
